--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -17,3 +17,4 @@
 - ignore: {name: "Use fmap" }
 - ignore: {name: "Redundant lambda"}
 - ignore: {name: "Use lambda-case" }
+- ignore: {name: "Use record patterns"}
